# LottoRust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
mcp-server/: Cargo.toml  README.md  mcp-config.json
mcp-server/src/: api.rs  config.rs  connection.rs  database.rs  lib.rs  main.rs  mcp_handler.rs  reports.rs  types.rs  use_cases.rs  utils.rs
src/: api.rs  database.rs  demo.rs  main.rs  reports.rs  types.rs  utils.rs
