[package]
name = "lottery-mcp-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lottery-mcp-server"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Existing lottery dependencies
reqwest = { version = "0.12", features = ["json"] }
rusqlite = "0.37"
chrono = "0.4.41"

# Additional utilities
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config and database connection pooling

[lib]
name = "lottery_lib"
path = "src/lib.rs"
